--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 PROJECT( $ENV{projectName} )
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 ")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -pthread ")
 FILE(GLOB SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/$ENV{projectName}/src/*.cpp)
 #SET (SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/$ENV{projectName}/src/*.cpp)
 
